section 2 - crated desktop app and added option to browse a file

--- a/package.json
+++ b/package.json
@@ -18,6 +18,10 @@
   },
   "homepage": "https://github.com/kapilkathuria/lrn_electron#readme",
   "dependencies": {
+    "dotenv": "^8.2.0",
     "electron": "^10.1.5"
+  },
+  "devDependencies": {
+    "electron-reload": "^1.5.0"
   }
 }
