--- a/package.json
+++ b/package.json
@@ -19,9 +19,19 @@
   "homepage": "https://github.com/kapilkathuria/lrn_electron#readme",
   "dependencies": {
     "dotenv": "^8.2.0",
-    "electron": "^10.1.5"
+    "electron": "^10.1.5",
+    "fluent-ffmpeg": "^2.1.2"
   },
   "devDependencies": {
-    "electron-reload": "^1.5.0"
+    "electron-reload": "^1.5.0",
+    "eslint": "^7.2.0",
+    "eslint-config-airbnb": "^18.2.0",
+    "eslint-config-prettier": "^6.14.0",
+    "eslint-plugin-import": "^2.21.2",
+    "eslint-plugin-jsx-a11y": "^6.3.0",
+    "eslint-plugin-prettier": "^3.1.4",
+    "eslint-plugin-react": "^7.20.0",
+    "eslint-plugin-react-hooks": "^4.0.0",
+    "prettier": "^2.1.2"
   }
 }
